--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "@testing-library/user-event": "^12.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.18",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
-  "scripts": { 
+  "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
