--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.4.0",
     "react-image-gallery": "^1.0.9",
     "react-responsive-carousel": "^3.2.18",
     "react-scripts": "4.0.2",
